# uprava

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.codex-runtime  Dockerfile.core  Dockerfile.generated-ui-builder  Dockerfile.node  Dockerfile.toolhive  Makefile  README.md  compose.dev.yaml  compose.yaml  deny.toml  superadditivity-theory  taplo.toml
.github/workflows/: ci.yml  workflow-smoke.yml
apps/web/: .dockerignore  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ci/: Dockerfile  build.sh  deploy.sh  finalize.sh  lib.sh  prepare.sh  run.sh
crates/cortex-logging/: Cargo.toml
crates/cortex-node/: Cargo.toml
crates/cortex-node/src/: main.rs
crates/cortex-protocol/: Cargo.toml
crates/cortex-server/: Cargo.toml
crates/cortex-server/src/: lib.rs  main.rs
crates/uprava-logging/: Cargo.toml
crates/uprava-logging/src/: lib.rs
crates/uprava-logging/tests/: otlp_unavailable.rs
crates/uprava-node/: Cargo.toml
crates/uprava-node/src/: config.rs  lib.rs  main.rs  runtime.rs  runtime_tests.rs  supervisor.rs
crates/uprava-node/src/runtime/: managed_provider.rs  provider.rs  support.rs  task.rs  terminal.rs  tool_runtime.rs  workspace.rs
crates/uprava-node/src/runtime/application/: dispatch.rs  execution.rs  mod.rs
crates/uprava-node/src/runtime/persistence/: mod.rs  state.rs
crates/uprava-node/src/runtime/tests/: dispatch.rs  provider.rs  reliability.rs  state.rs  terminal.rs  tooling.rs  transport.rs  workspace.rs
crates/uprava-node/src/runtime/transport/: control.rs  enrollment.rs  mod.rs
crates/uprava-protocol/: Cargo.toml
crates/uprava-protocol/examples/: web_fixtures.rs
crates/uprava-protocol/src/: api.rs  artifacts.rs  control.rs  domain.rs  dynamic_ui.rs  lib.rs  managed_runtime.rs  plugins.rs  projection.rs  reference.rs  serde_json_value.rs  task.rs  tooling.rs  workspace.rs
crates/uprava-server/: Cargo.toml
crates/uprava-server/bundled-plugins/uprava.content-enhancements/: manifest.json
crates/uprava-server/bundled-plugins/uprava.diagrams/: manifest.json
crates/uprava-server/bundled-plugins/uprava.generated-react/: manifest.json
crates/uprava-server/bundled-plugins/uprava.markdown/: manifest.json
crates/uprava-server/bundled-plugins/uprava.plain-text/: manifest.json
crates/uprava-server/bundled-plugins/uprava.review-artifacts/: manifest.json
crates/uprava-server/bundled-plugins/uprava.theme-dark/: manifest.json
crates/uprava-server/bundled-plugins/uprava.trace-artifacts/: manifest.json
crates/uprava-server/src/: config.rs  domain.rs  lib.rs  main.rs  observability.rs  persistence.rs  runtime.rs  runtime_tests.rs
crates/uprava-server/src/persistence/: event.rs  migrations.rs  node.rs
crates/uprava-server/src/runtime/: support.rs
crates/uprava-server/src/runtime/application/: artifacts.rs  coordination.rs  dynamic_ui.rs  mod.rs  plugins.rs  projection.rs  scheduling.rs  session.rs  task.rs  tooling.rs  workspace.rs
crates/uprava-server/src/runtime/tests/: artifacts.rs  control.rs  dynamic_ui.rs  event.rs  foundation.rs  http.rs  node.rs  persistence.rs  plugins.rs  runtime.rs  scheduling.rs  session.rs  task.rs  tooling.rs  workspace.rs
crates/uprava-server/src/runtime/transport/: http.rs  live.rs  mcp.rs  mod.rs  node.rs
crates/uprava-toolhive/: Cargo.toml
crates/uprava-toolhive/src/: main.rs
docs/: README.md  releases.md  versioning.md  vision.md
docs/audit/: audit-2026-07-09.md
docs/deploy/: ci-cd.md  deployment-observability.md  deployment.md
docs/development/: agent-tooling-contracts.md  self-hosting-golden-path.md  tech-stack.md
docs/en/: README.md  architecture.md  ci-cd.md  deployment-observability.md  deployment.md  feature-inventory.md  feature-queue.md  product-evolution.md  product-stages.md  releases.md  self-hosting-golden-path.md  tech-stack.md  v01.md  versioning.md  vision.md  workspace-editing-and-ide-sidecar.md  workspace-inspector.md
docs/polish/: 0.2.0-checkpoint-2026-07-10-m7.md  0.2.0-handoff.md  0.2.0-implementation-ledger.md  README.md
docs/product/: feature-inventory.md  feature-queue.md  product-evolution.md  product-stages.md
docs/ru/: README.md  architecture.md  ci-cd.md  cortex-notes.md  deployment-observability.md  deployment.md  feature-inventory.md  feature-queue.md  product-evolution.md  product-stages.md  releases.md  self-hosting-golden-path.md  tech-stack.md  uprava-notes.md  v01.md  versioning.md  vision.md  workspace-editing-and-ide-sidecar.md  workspace-inspector.md
docs/runbooks/: agent-tooling-toolhive-linear.md  task-sandbox-runtime.md  v01-local-dev.md
docs/systems/: README.md  architecture.md
docs/tmp-plans/: 0.2.0-completion-from-current.md  0.2.0-quality-foundation.md  0.2.0-rc-checklist.md  0.2.10-git-review-basics.md  16-managed-agent-work-loop.md  (+14 more)
ops/: .env.example  Makefile  README.md  compose.yaml  node.env.example  opensandbox.dev.toml  opensandbox.toml  toolhive-config.yaml  toolhive.env.example  uprava-ci-root
scripts/: backup-sqlite.sh  check-backup-restore.sh  check-ci-phases.sh  check-ci-policy.sh  check-clean-bootstrap-deploy.sh  check-clean-state-restore.sh  check-container-runtime-users.sh  check-deploy-auto-rollback.sh  check-deploy-entrypoint.sh  check-deployment-rollback.sh  check-image-runtime.sh  check-ops-rollback.sh  check-production-smoke.sh  check-release-manifest.sh  check-release-retention.sh  check-state-epoch.sh  check_logging_policy.py  check_markdown.py  check_runtime_boundaries.py  codex-provider-smoke.sh  compose-smoke.sh  deploy.sh  dev-smoke.sh  extract-node-artifact.sh  production-smoke.sh  protocol_check.py  prune-uprava-images.sh  prune-uprava-releases.sh  reset-state-epoch.sh  toolhive-entrypoint.sh  verify-sqlite-backup.sh  write_release_manifest.sh
sources/: notes.md
tools/codex-app-server-probe/: Cargo.toml  README.md
tools/codex-app-server-probe/fixtures/: codex-app-server-0.144.1.json
tools/codex-app-server-probe/src/: main.rs
(+206 files in other folders)
