[workspace]
members = [
  "crates/uprava-logging",
  "crates/uprava-node",
  "crates/uprava-protocol",
  "crates/uprava-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false
repository = "https://github.com/ch37n1/uprava"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.86"
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
libc = "0.2.186"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.9"
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "uuid",
] }
subtle = "2.6.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "limit", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
