[workspace]
members = [
  "crates/uprava-logging",
  "crates/uprava-node",
  "crates/uprava-protocol",
  "crates/uprava-server",
  "crates/uprava-toolhive",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false
repository = "https://github.com/zaryalabs/uprava"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
hmac = "0.12.1"
jiff = { version = "0.2.29", features = ["tzdb-bundle-always"] }
libc = "0.2.186"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-blocking-client",
  "reqwest-rustls-webpki-roots",
] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmcp = { version = "=2.2.0", default-features = false, features = [
  "server",
  "macros",
  "schemars",
  "transport-streamable-http-server",
] }
pty-process = { version = "0.5.3", features = ["async"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
semver = "1.0.28"
sha2 = "0.10.9"
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "uuid",
] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.39.2", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "limit", "timeout", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
