[package]
name = "uprava-node"
version = "0.2.16"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
uprava-logging = { path = "../uprava-logging" }
uprava-protocol = { path = "../uprava-protocol" }
futures-util.workspace = true
libc.workspace = true
pty-process.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
