[package]
name = "uprava-server"
version = "0.2.10"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
uprava-logging = { path = "../uprava-logging" }
uprava-protocol = { path = "../uprava-protocol" }
futures-util.workspace = true
hmac.workspace = true
jiff.workspace = true
rand_core.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
