[package]
name = "uprava-toolhive"
version = "0.2.22"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uprava-logging = { path = "../uprava-logging" }
uprava-protocol = { path = "../uprava-protocol" }
